--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint ./src/*.js",
     "format": "prettier ./src/* --write",
     "dev": "parcel ./src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +24,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.21.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2"
   }
