--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build ./src/index.html",
     "lint": "eslint ./src/*.js",
     "format": "prettier ./src/* --write",
     "dev": "parcel ./src/index.html",
