--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "prettier", "prettier/react"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -15,8 +16,7 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
-        "prettier"
+        "react", "prettier"
     ],
     "rules": {
     }
