--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "homepage": "https://github.com/dimitriwdev/React-Todo-App#readme",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2"
